# mnote

./: .eslintignore  .eslintrc.js  .gitignore  LICENSE  README.md  acknowledgements.txt  architecture.txt  bump.bat  fmt.bat  fmt.ps1  install.ps1  lint.bat  lint.ps1  package-lock.json  package.json  prettier.config.js  scripts.toml  tsconfig.json  workspace.sh
.github/workflows/: build-debug.yml  build-release.yml  build.yml  debug.yml  publish.yml  test-artifact.yml
app/: build.js  fs.ts  index.js  index.ts  package-lock.json  package.json  readme.txt  run.bat
app/public/: index.html
app/src/: fs.ts  index.ts  system.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-web/: index.ts
mnote/: index.ts  mnote.ts
mnote-app/: build-web.js  build.js  nodefill.js  package-lock.json  package.json  run-build.js  run.bat  styles.scss  tsconfig.json
mnote-app/bundle-scripts/: bundle-dev.js  bundle-release.js  bundle-web.js  bundle.js
mnote-app/public/: index.html
mnote-app/src-tauri/: Cargo.toml  Info.plist  rustfmt.toml  tauri.conf.json
mnote-app/src-tauri-frontend/: fs.ts  index-release.ts  run.ts  system.ts
mnote-app/src-tauri/icons/: icon.icns
mnote-app/src-tauri/src/: dialog.rs  filesystem.rs  main.rs  show.rs  watcher.rs
mnote-app/src-web-demo/: fs.ts  index.ts  mocks.ts
mnote-components/: package-lock.json  package.json  resets.scss
mnote-core/: index.ts  mnote.ts  package-lock.json  package.json  types.ts
mnote-deps/: normalize.scss  package-lock.json  package.json
mnote-extensions/: package-lock.json  package.json  starter.ts  tsconfig.json
mnote-styles/: default.scss  light.scss  mnote-core.scss  mnote-inputs.scss  mnote-resets.scss  mnote-rich-text.scss  mnote-styles.scss  mnote-vars.scss  normalize.scss  open-color.scss  package-lock.json  package.json
mnote-util/: dom.ts  elbuilder.ts  emitter.ts  hookable.ts  immutable.ts  nodes.ts  package-lock.json  package.json  path.ts  search.ts  signal.ts  url.ts  useListener.ts  validators.ts  wordcount.ts
(+354 files in other folders)
