[package]
name = "mnote"
version = "0.1.0"
description = ""
authors = ["gfrancine"]
license = ""
repository = ""
default-run = "mnote"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.7", features = ["api-all"] }
notify = "4.0.17"
rfd = "0.4.4"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
